// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin resource all returns plugins as array 1`] = `
Array [
  Object {
    "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
    "id": "gatsby-source-filesystem",
    "name": "gatsby-source-filesystem",
    "options": Object {
      "name": "pages",
      "path": "\${__dirname}/src/pages",
    },
  },
  Object {
    "_message": "Installed gatsby-transformer-sharp in gatsby-config.js",
    "id": "gatsby-transformer-sharp",
    "name": "gatsby-transformer-sharp",
    "options": undefined,
  },
  Object {
    "_message": "Installed gatsby-plugin-emotion in gatsby-config.js",
    "id": "gatsby-plugin-emotion",
    "name": "gatsby-plugin-emotion",
    "options": undefined,
  },
  Object {
    "_message": "Installed gatsby-plugin-typography in gatsby-config.js",
    "id": "gatsby-plugin-typography",
    "name": "gatsby-plugin-typography",
    "options": Object {
      "pathToConfigModule": "src/utils/typography",
    },
  },
  Object {
    "_message": "Installed gatsby-transformer-remark in gatsby-config.js",
    "id": "gatsby-transformer-remark",
    "name": "gatsby-transformer-remark",
    "options": Object {
      "plugins": Array [
        Object {
          "options": Object {
            "maxWidth": 590,
          },
          "resolve": "gatsby-remark-images",
        },
        Object {
          "options": Object {
            "wrapperStyle": "margin-bottom: 1.0725rem",
          },
          "resolve": "gatsby-remark-responsive-iframe",
        },
        "gatsby-remark-prismjs",
        "gatsby-remark-copy-linked-files",
        "gatsby-remark-smartypants",
      ],
    },
  },
  Object {
    "_message": "Installed gatsby-plugin-sharp in gatsby-config.js",
    "id": "gatsby-plugin-sharp",
    "name": "gatsby-plugin-sharp",
    "options": undefined,
  },
  Object {
    "_message": "Installed gatsby-plugin-google-analytics in gatsby-config.js",
    "id": "gatsby-plugin-google-analytics",
    "name": "gatsby-plugin-google-analytics",
    "options": Object {
      "trackingId": "UA-774017-3",
    },
  },
  Object {
    "_message": "Installed gatsby-plugin-manifest in gatsby-config.js",
    "id": "gatsby-plugin-manifest",
    "name": "gatsby-plugin-manifest",
    "options": Object {
      "background_color": null,
      "display": "minimal-ui",
      "icon": "static/logo.png",
      "name": "Bricolage",
      "short_name": "Bricolage",
      "start_url": "/",
      "theme_color": null,
    },
  },
  Object {
    "_message": "Installed gatsby-plugin-offline in gatsby-config.js",
    "id": "gatsby-plugin-offline",
    "name": "gatsby-plugin-offline",
    "options": undefined,
  },
  Object {
    "_message": "Installed gatsby-plugin-react-helmet in gatsby-config.js",
    "id": "gatsby-plugin-react-helmet",
    "name": "gatsby-plugin-react-helmet",
    "options": undefined,
  },
]
`;

exports[`gatsby-plugin resource creates default gatsby-config.js if there isn't one already 1`] = `
Object {
  "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
  "description": "Gatsby plugin which parses files within a directory for further parsing by other plugins",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "options": undefined,
  "readme": "# gatsby-source-filesystem

A Gatsby source plugin for sourcing data into your Gatsby application
from your local filesystem.

The plugin creates \`File\` nodes from files. The various \\"transformer\\"
plugins can transform \`File\` nodes into various other types of data e.g.
\`gatsby-transformer-json\` transforms JSON files into JSON data nodes and
\`gatsby-transformer-remark\` transforms markdown files into \`MarkdownRemark\`
nodes from which you can query an HTML representation of the markdown.

## Install

\`npm install --save gatsby-source-filesystem\`

## How to use

\`\`\`javascript
// In your gatsby-config.js
module.exports = {
  plugins: [
    // You can have multiple instances of this plugin
    // to read source nodes from different locations on your
    // filesystem.
    //
    // The following sets up the Jekyll pattern of having a
    // \\"pages\\" directory for Markdown files and a \\"data\\" directory
    // for \`.json\`, \`.yaml\`, \`.csv\`.
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`pages\`,
        path: \`\${__dirname}/src/pages/\`,
      },
    },
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`data\`,
        path: \`\${__dirname}/src/data/\`,
        ignore: [\`**//.*\`], // ignore files starting with a dot
      },
    },
  ],
}
\`\`\`

## Options

In addition to the name and path parameters you may pass an optional \`ignore\` array of file globs to ignore.

They will be added to the following default list:

\`\`\`text
**/*.un~
**/.DS_Store
**/.gitignore
**/.npmignore
**/.babelrc
**/yarn.lock
**/node_modules
../**/dist/**
\`\`\`

To prevent concurrent requests overload of \`processRemoteNode\`, you can adjust the \`200\` default concurrent downloads, with \`GATSBY_CONCURRENT_DOWNLOAD\` environment variable.

## How to query

You can query file nodes like the following:

\`\`\`graphql
{
  allFile {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

To filter by the \`name\` you specified in the config, use \`sourceInstanceName\`:

\`\`\`graphql
{
  allFile(filter: { sourceInstanceName: { eq: \\"data\\" } }) {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

## Helper functions

\`gatsby-source-filesystem\` exports three helper functions:

- \`createFilePath\`
- \`createRemoteFileNode\`
- \`createFileNodeFromBuffer\`

### createFilePath

When building pages from files, you often want to create a URL from a file's path on the file system. E.g. if you have a markdown file at \`src/content/2018-01-23-an-exploration-of-the-nature-of-reality/index.md\`, you might want to turn that into a page on your site at \`example.com/2018-01-23-an-exploration-of-the-nature-of-reality/\`. \`createFilePath\` is a helper function to make this task easier.

\`\`\`javascript
createFilePath({
  // The node you'd like to convert to a path
  // e.g. from a markdown, JSON, YAML file, etc
  node,
  // Method used to get a node
  // The parameter from \`onCreateNode\` should be passed in here
  getNode,
  // The base path for your files.
  // Defaults to \`src/pages\`. For the example above, you'd use \`src/content\`.
  basePath,
  // Whether you want your file paths to contain a trailing \`/\` slash
  // Defaults to true
  trailingSlash,
})
\`\`\`

#### Example usage

The following is taken from [Gatsby Tutorial, Part Seven](https://www.gatsbyjs.org/tutorial/part-seven/) and is used to create URL slugs for markdown pages.

\`\`\`javascript
const { createFilePath } = require(\`gatsby-source-filesystem\`)

exports.onCreateNode = ({ node, getNode, actions }) => {
  const { createNodeField } = actions
  // Ensures we are processing only markdown files
  if (node.internal.type === \\"MarkdownRemark\\") {
    // Use \`createFilePath\` to turn markdown files in our \`data/faqs\` directory into \`/faqs/slug\`
    const relativeFilePath = createFilePath({
      node,
      getNode,
      basePath: \\"data/faqs/\\",
    })

    // Creates new query'able field with name of 'slug'
    createNodeField({
      node,
      name: \\"slug\\",
      value: \`/faqs\${relativeFilePath}\`,
    })
  }
}
\`\`\`

### createRemoteFileNode

When building source plugins for remote data sources such as headless CMSs, their data will often link to files stored remotely that are often convenient to download so you can work with them locally.

The \`createRemoteFileNode\` helper makes it easy to download remote files and add them to your site's GraphQL schema.

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file.jpg\`,

  // The id of the parent node (i.e. the node to which the new remote File node will be linked to.
  parentNodeId,

  // Gatsby's cache which the helper uses to check if the file has been downloaded already. It's passed to all Node APIs.
  getCache,

  // The action used to create nodes
  createNode,

  // A helper function for creating node Ids
  createNodeId,

  // OPTIONAL
  // Adds htaccess authentication to the download request if passed in.
  auth: { htaccess_user: \`USER\`, htaccess_pass: \`PASSWORD\` },

  // OPTIONAL
  // Adds extra http headers to download request if passed in.
  httpHeaders: { Authorization: \`Bearer someAccessToken\` },

  // OPTIONAL
  // Sets the file extension
  ext: \\".jpg\\",
})
\`\`\`

#### Example usage

The following example is pulled from [gatsby-source-wordpress](https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-wordpress). Downloaded files are created as \`File\` nodes and then linked to the WordPress Media node, so it can be queried both as a regular \`File\` node and from the \`localFile\` field in the Media node.

\`\`\`javascript
const { createRemoteFileNode } = require(\`gatsby-source-filesystem\`)

exports.downloadMediaFiles = ({
  nodes,
  getCache,
  createNode,
  createNodeId,
  _auth,
}) => {
  nodes.map(async node => {
    let fileNode
    // Ensures we are only processing Media Files
    // \`wordpress__wp_media\` is the media file type name for WordPress
    if (node.__type === \`wordpress__wp_media\`) {
      try {
        fileNode = await createRemoteFileNode({
          url: node.source_url,
          parentNodeId: node.id,
          getCache,
          createNode,
          createNodeId,
          auth: _auth,
        })
      } catch (e) {
        // Ignore
      }
    }

    // Adds a field \`localFile\` to the node
    // ___NODE appendix tells Gatsby that this field will link to another node
    if (fileNode) {
      node.localFile___NODE = fileNode.id
    }
  })
}
\`\`\`

The file node can then be queried using GraphQL. See an example of this in the [gatsby-source-wordpress README](/packages/gatsby-source-wordpress/#image-processing) where downloaded images are queried using [gatsby-transformer-sharp](/packages/gatsby-transformer-sharp/) to use in the component [gatsby-image](/packages/gatsby-image/).

#### Retrieving the remote file name and extension

The helper tries first to retrieve the file name and extension by parsing the url and the path provided (e.g. if the url is \`https://example.com/image.jpg\`, the extension will be inferred as \`.jpg\` and the name as \`image\`). If the url does not contain an extension, we use the [\`file-type\`](https://www.npmjs.com/package/file-type) package to infer the file type. Finally, the name and the extension _can_ be explicitly passed, like so:

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file-without-an-extension\`,
  parentNodeId: node.id,
  getCache,
  createNode,
  createNodeId,
  // if necessary!
  ext: \\".jpg\\",
  name: \\"image\\",
})
\`\`\`

### createFileNodeFromBuffer

When working with data that isn't already stored in a file, such as when querying binary/blob fields from a database, it's helpful to cache that data to the filesystem in order to use it with other transformers that accept files as input.

The \`createFileNodeFromBuffer\` helper accepts a \`Buffer\`, caches its contents to disk, and creates a file node that points to it.

## Example usage

The following example is adapted from the source of [\`gatsby-source-mysql\`](https://github.com/malcolm-kee/gatsby-source-mysql):

\`\`\`js
// gatsby-node.js
const createMySqlNodes = require(\`./create-nodes\`)

exports.sourceNodes = async ({ actions, createNodeId, getCache }, config) => {
  const { createNode } = actions
  const { conn, queries } = config
  const { db, results } = await query(conn, queries)

  try {
    queries
      .map((query, i) => ({ ...query, ___sql: results[i] }))
      .forEach(result =>
        createMySqlNodes(result, results, createNode, {
          createNode,
          createNodeId,
          getCache,
        })
      )
    db.end()
  } catch (e) {
    console.error(e)
    db.end()
  }
}

// create-nodes.js
const { createFileNodeFromBuffer } = require(\`gatsby-source-filesystem\`)
const createNodeHelpers = require(\`gatsby-node-helpers\`).default

const { createNodeFactory } = createNodeHelpers({ typePrefix: \`mysql\` })

function attach(node, key, value, ctx) {
  if (Buffer.isBuffer(value)) {
    ctx.linkChildren.push(parentNodeId =>
      createFileNodeFromBuffer({
        buffer: value,
        getCache: ctx.getCache,
        createNode: ctx.createNode,
        createNodeId: ctx.createNodeId,
      })
    )
    value = \`Buffer\`
  }

  node[key] = value
}

function createMySqlNodes({ name, __sql, idField, keys }, results, ctx) {
  const MySqlNode = createNodeFactory(name)
  ctx.linkChildren = []

  return __sql.forEach(row => {
    if (!keys) keys = Object.keys(row)

    const node = { id: row[idField] }

    for (const key of keys) {
      attach(node, key, row[key], ctx)
    }

    node = ctx.createNode(node)

    for (const link of ctx.linkChildren) {
      link(node.id)
    }
  })
}

module.exports = createMySqlNodes
\`\`\`

## Troubleshooting

In case that due to spotty network, or slow connection, some remote files fail to download. Even after multiple retries and adjusting concurrent downloads, you can adjust timeout and retry settings with these environment variables:

- \`STALL_RETRY_LIMIT\`, default: \`3\`
- \`STALL_TIMEOUT\`, default: \`30000\`
- \`CONNECTION_TIMEOUT\`, default: \`30000\`
",
  "shadowableFiles": Array [
    "src/gatsby-source-filesystem/__tests__/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/__tests__/create-file-node.js",
    "src/gatsby-source-filesystem/__tests__/create-remote-file-node.js",
    "src/gatsby-source-filesystem/__tests__/fixtures/file.json",
    "src/gatsby-source-filesystem/__tests__/gatsby-node.js",
    "src/gatsby-source-filesystem/__tests__/index.js",
    "src/gatsby-source-filesystem/__tests__/utils.js",
    "src/gatsby-source-filesystem/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/create-file-node.js",
    "src/gatsby-source-filesystem/create-file-path.js",
    "src/gatsby-source-filesystem/create-remote-file-node.js",
    "src/gatsby-source-filesystem/extend-file-node.js",
    "src/gatsby-source-filesystem/gatsby-node.js",
    "src/gatsby-source-filesystem/index.js",
    "src/gatsby-source-filesystem/utils.js",
  ],
  "shadowedFiles": Array [],
}
`;

exports[`gatsby-plugin resource e2e plugin resource test with hello world starter: GatsbyPlugin create 1`] = `
Object {
  "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
  "description": "Gatsby plugin which parses files within a directory for further parsing by other plugins",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "options": undefined,
  "readme": "# gatsby-source-filesystem

A Gatsby source plugin for sourcing data into your Gatsby application
from your local filesystem.

The plugin creates \`File\` nodes from files. The various \\"transformer\\"
plugins can transform \`File\` nodes into various other types of data e.g.
\`gatsby-transformer-json\` transforms JSON files into JSON data nodes and
\`gatsby-transformer-remark\` transforms markdown files into \`MarkdownRemark\`
nodes from which you can query an HTML representation of the markdown.

## Install

\`npm install --save gatsby-source-filesystem\`

## How to use

\`\`\`javascript
// In your gatsby-config.js
module.exports = {
  plugins: [
    // You can have multiple instances of this plugin
    // to read source nodes from different locations on your
    // filesystem.
    //
    // The following sets up the Jekyll pattern of having a
    // \\"pages\\" directory for Markdown files and a \\"data\\" directory
    // for \`.json\`, \`.yaml\`, \`.csv\`.
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`pages\`,
        path: \`\${__dirname}/src/pages/\`,
      },
    },
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`data\`,
        path: \`\${__dirname}/src/data/\`,
        ignore: [\`**//.*\`], // ignore files starting with a dot
      },
    },
  ],
}
\`\`\`

## Options

In addition to the name and path parameters you may pass an optional \`ignore\` array of file globs to ignore.

They will be added to the following default list:

\`\`\`text
**/*.un~
**/.DS_Store
**/.gitignore
**/.npmignore
**/.babelrc
**/yarn.lock
**/node_modules
../**/dist/**
\`\`\`

To prevent concurrent requests overload of \`processRemoteNode\`, you can adjust the \`200\` default concurrent downloads, with \`GATSBY_CONCURRENT_DOWNLOAD\` environment variable.

## How to query

You can query file nodes like the following:

\`\`\`graphql
{
  allFile {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

To filter by the \`name\` you specified in the config, use \`sourceInstanceName\`:

\`\`\`graphql
{
  allFile(filter: { sourceInstanceName: { eq: \\"data\\" } }) {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

## Helper functions

\`gatsby-source-filesystem\` exports three helper functions:

- \`createFilePath\`
- \`createRemoteFileNode\`
- \`createFileNodeFromBuffer\`

### createFilePath

When building pages from files, you often want to create a URL from a file's path on the file system. E.g. if you have a markdown file at \`src/content/2018-01-23-an-exploration-of-the-nature-of-reality/index.md\`, you might want to turn that into a page on your site at \`example.com/2018-01-23-an-exploration-of-the-nature-of-reality/\`. \`createFilePath\` is a helper function to make this task easier.

\`\`\`javascript
createFilePath({
  // The node you'd like to convert to a path
  // e.g. from a markdown, JSON, YAML file, etc
  node,
  // Method used to get a node
  // The parameter from \`onCreateNode\` should be passed in here
  getNode,
  // The base path for your files.
  // Defaults to \`src/pages\`. For the example above, you'd use \`src/content\`.
  basePath,
  // Whether you want your file paths to contain a trailing \`/\` slash
  // Defaults to true
  trailingSlash,
})
\`\`\`

#### Example usage

The following is taken from [Gatsby Tutorial, Part Seven](https://www.gatsbyjs.org/tutorial/part-seven/) and is used to create URL slugs for markdown pages.

\`\`\`javascript
const { createFilePath } = require(\`gatsby-source-filesystem\`)

exports.onCreateNode = ({ node, getNode, actions }) => {
  const { createNodeField } = actions
  // Ensures we are processing only markdown files
  if (node.internal.type === \\"MarkdownRemark\\") {
    // Use \`createFilePath\` to turn markdown files in our \`data/faqs\` directory into \`/faqs/slug\`
    const relativeFilePath = createFilePath({
      node,
      getNode,
      basePath: \\"data/faqs/\\",
    })

    // Creates new query'able field with name of 'slug'
    createNodeField({
      node,
      name: \\"slug\\",
      value: \`/faqs\${relativeFilePath}\`,
    })
  }
}
\`\`\`

### createRemoteFileNode

When building source plugins for remote data sources such as headless CMSs, their data will often link to files stored remotely that are often convenient to download so you can work with them locally.

The \`createRemoteFileNode\` helper makes it easy to download remote files and add them to your site's GraphQL schema.

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file.jpg\`,

  // The id of the parent node (i.e. the node to which the new remote File node will be linked to.
  parentNodeId,

  // Gatsby's cache which the helper uses to check if the file has been downloaded already. It's passed to all Node APIs.
  getCache,

  // The action used to create nodes
  createNode,

  // A helper function for creating node Ids
  createNodeId,

  // OPTIONAL
  // Adds htaccess authentication to the download request if passed in.
  auth: { htaccess_user: \`USER\`, htaccess_pass: \`PASSWORD\` },

  // OPTIONAL
  // Adds extra http headers to download request if passed in.
  httpHeaders: { Authorization: \`Bearer someAccessToken\` },

  // OPTIONAL
  // Sets the file extension
  ext: \\".jpg\\",
})
\`\`\`

#### Example usage

The following example is pulled from [gatsby-source-wordpress](https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-wordpress). Downloaded files are created as \`File\` nodes and then linked to the WordPress Media node, so it can be queried both as a regular \`File\` node and from the \`localFile\` field in the Media node.

\`\`\`javascript
const { createRemoteFileNode } = require(\`gatsby-source-filesystem\`)

exports.downloadMediaFiles = ({
  nodes,
  getCache,
  createNode,
  createNodeId,
  _auth,
}) => {
  nodes.map(async node => {
    let fileNode
    // Ensures we are only processing Media Files
    // \`wordpress__wp_media\` is the media file type name for WordPress
    if (node.__type === \`wordpress__wp_media\`) {
      try {
        fileNode = await createRemoteFileNode({
          url: node.source_url,
          parentNodeId: node.id,
          getCache,
          createNode,
          createNodeId,
          auth: _auth,
        })
      } catch (e) {
        // Ignore
      }
    }

    // Adds a field \`localFile\` to the node
    // ___NODE appendix tells Gatsby that this field will link to another node
    if (fileNode) {
      node.localFile___NODE = fileNode.id
    }
  })
}
\`\`\`

The file node can then be queried using GraphQL. See an example of this in the [gatsby-source-wordpress README](/packages/gatsby-source-wordpress/#image-processing) where downloaded images are queried using [gatsby-transformer-sharp](/packages/gatsby-transformer-sharp/) to use in the component [gatsby-image](/packages/gatsby-image/).

#### Retrieving the remote file name and extension

The helper tries first to retrieve the file name and extension by parsing the url and the path provided (e.g. if the url is \`https://example.com/image.jpg\`, the extension will be inferred as \`.jpg\` and the name as \`image\`). If the url does not contain an extension, we use the [\`file-type\`](https://www.npmjs.com/package/file-type) package to infer the file type. Finally, the name and the extension _can_ be explicitly passed, like so:

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file-without-an-extension\`,
  parentNodeId: node.id,
  getCache,
  createNode,
  createNodeId,
  // if necessary!
  ext: \\".jpg\\",
  name: \\"image\\",
})
\`\`\`

### createFileNodeFromBuffer

When working with data that isn't already stored in a file, such as when querying binary/blob fields from a database, it's helpful to cache that data to the filesystem in order to use it with other transformers that accept files as input.

The \`createFileNodeFromBuffer\` helper accepts a \`Buffer\`, caches its contents to disk, and creates a file node that points to it.

## Example usage

The following example is adapted from the source of [\`gatsby-source-mysql\`](https://github.com/malcolm-kee/gatsby-source-mysql):

\`\`\`js
// gatsby-node.js
const createMySqlNodes = require(\`./create-nodes\`)

exports.sourceNodes = async ({ actions, createNodeId, getCache }, config) => {
  const { createNode } = actions
  const { conn, queries } = config
  const { db, results } = await query(conn, queries)

  try {
    queries
      .map((query, i) => ({ ...query, ___sql: results[i] }))
      .forEach(result =>
        createMySqlNodes(result, results, createNode, {
          createNode,
          createNodeId,
          getCache,
        })
      )
    db.end()
  } catch (e) {
    console.error(e)
    db.end()
  }
}

// create-nodes.js
const { createFileNodeFromBuffer } = require(\`gatsby-source-filesystem\`)
const createNodeHelpers = require(\`gatsby-node-helpers\`).default

const { createNodeFactory } = createNodeHelpers({ typePrefix: \`mysql\` })

function attach(node, key, value, ctx) {
  if (Buffer.isBuffer(value)) {
    ctx.linkChildren.push(parentNodeId =>
      createFileNodeFromBuffer({
        buffer: value,
        getCache: ctx.getCache,
        createNode: ctx.createNode,
        createNodeId: ctx.createNodeId,
      })
    )
    value = \`Buffer\`
  }

  node[key] = value
}

function createMySqlNodes({ name, __sql, idField, keys }, results, ctx) {
  const MySqlNode = createNodeFactory(name)
  ctx.linkChildren = []

  return __sql.forEach(row => {
    if (!keys) keys = Object.keys(row)

    const node = { id: row[idField] }

    for (const key of keys) {
      attach(node, key, row[key], ctx)
    }

    node = ctx.createNode(node)

    for (const link of ctx.linkChildren) {
      link(node.id)
    }
  })
}

module.exports = createMySqlNodes
\`\`\`

## Troubleshooting

In case that due to spotty network, or slow connection, some remote files fail to download. Even after multiple retries and adjusting concurrent downloads, you can adjust timeout and retry settings with these environment variables:

- \`STALL_RETRY_LIMIT\`, default: \`3\`
- \`STALL_TIMEOUT\`, default: \`30000\`
- \`CONNECTION_TIMEOUT\`, default: \`30000\`
",
  "shadowableFiles": Array [
    "src/gatsby-source-filesystem/__tests__/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/__tests__/create-file-node.js",
    "src/gatsby-source-filesystem/__tests__/create-remote-file-node.js",
    "src/gatsby-source-filesystem/__tests__/fixtures/file.json",
    "src/gatsby-source-filesystem/__tests__/gatsby-node.js",
    "src/gatsby-source-filesystem/__tests__/index.js",
    "src/gatsby-source-filesystem/__tests__/utils.js",
    "src/gatsby-source-filesystem/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/create-file-node.js",
    "src/gatsby-source-filesystem/create-file-path.js",
    "src/gatsby-source-filesystem/create-remote-file-node.js",
    "src/gatsby-source-filesystem/extend-file-node.js",
    "src/gatsby-source-filesystem/gatsby-node.js",
    "src/gatsby-source-filesystem/index.js",
    "src/gatsby-source-filesystem/utils.js",
  ],
  "shadowedFiles": Array [],
}
`;

exports[`gatsby-plugin resource e2e plugin resource test with hello world starter: GatsbyPlugin create plan 1`] = `
Object {
  "currentState": "/**
 * Configure your Gatsby site with this file.
 *
 * See: https://www.gatsbyjs.org/docs/gatsby-config/
 */
module.exports = {
  /* Your site config here */
  plugins: [],
};
",
  "dependsOn": Array [
    Object {
      "name": "gatsby-source-filesystem",
      "resourceName": "NPMPackage",
    },
  ],
  "describe": "Install gatsby-source-filesystem in gatsby-config.js",
  "diff": "- Original  - 1
+ Modified  + 7

@@ -5,6 +5,12 @@
   */
  module.exports = {
    /* Your site config here */
-   plugins: [],
+   plugins: [
+     {
+       resolve: \\"gatsby-source-filesystem\\",
+       options: undefined,
+       __key: \\"gatsby-source-filesystem\\",
+     },
+   ],
  };
",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "newState": "/**
 * Configure your Gatsby site with this file.
 *
 * See: https://www.gatsbyjs.org/docs/gatsby-config/
 */
module.exports = {
  /* Your site config here */
  plugins: [
    {
      resolve: \\"gatsby-source-filesystem\\",
      options: undefined,
      __key: \\"gatsby-source-filesystem\\",
    },
  ],
};
",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test with hello world starter: GatsbyPlugin destroy 1`] = `undefined`;

exports[`gatsby-plugin resource e2e plugin resource test with hello world starter: GatsbyPlugin update 1`] = `
Object {
  "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
  "description": "Gatsby plugin which parses files within a directory for further parsing by other plugins",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "options": undefined,
  "readme": "# gatsby-source-filesystem

A Gatsby source plugin for sourcing data into your Gatsby application
from your local filesystem.

The plugin creates \`File\` nodes from files. The various \\"transformer\\"
plugins can transform \`File\` nodes into various other types of data e.g.
\`gatsby-transformer-json\` transforms JSON files into JSON data nodes and
\`gatsby-transformer-remark\` transforms markdown files into \`MarkdownRemark\`
nodes from which you can query an HTML representation of the markdown.

## Install

\`npm install --save gatsby-source-filesystem\`

## How to use

\`\`\`javascript
// In your gatsby-config.js
module.exports = {
  plugins: [
    // You can have multiple instances of this plugin
    // to read source nodes from different locations on your
    // filesystem.
    //
    // The following sets up the Jekyll pattern of having a
    // \\"pages\\" directory for Markdown files and a \\"data\\" directory
    // for \`.json\`, \`.yaml\`, \`.csv\`.
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`pages\`,
        path: \`\${__dirname}/src/pages/\`,
      },
    },
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`data\`,
        path: \`\${__dirname}/src/data/\`,
        ignore: [\`**//.*\`], // ignore files starting with a dot
      },
    },
  ],
}
\`\`\`

## Options

In addition to the name and path parameters you may pass an optional \`ignore\` array of file globs to ignore.

They will be added to the following default list:

\`\`\`text
**/*.un~
**/.DS_Store
**/.gitignore
**/.npmignore
**/.babelrc
**/yarn.lock
**/node_modules
../**/dist/**
\`\`\`

To prevent concurrent requests overload of \`processRemoteNode\`, you can adjust the \`200\` default concurrent downloads, with \`GATSBY_CONCURRENT_DOWNLOAD\` environment variable.

## How to query

You can query file nodes like the following:

\`\`\`graphql
{
  allFile {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

To filter by the \`name\` you specified in the config, use \`sourceInstanceName\`:

\`\`\`graphql
{
  allFile(filter: { sourceInstanceName: { eq: \\"data\\" } }) {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

## Helper functions

\`gatsby-source-filesystem\` exports three helper functions:

- \`createFilePath\`
- \`createRemoteFileNode\`
- \`createFileNodeFromBuffer\`

### createFilePath

When building pages from files, you often want to create a URL from a file's path on the file system. E.g. if you have a markdown file at \`src/content/2018-01-23-an-exploration-of-the-nature-of-reality/index.md\`, you might want to turn that into a page on your site at \`example.com/2018-01-23-an-exploration-of-the-nature-of-reality/\`. \`createFilePath\` is a helper function to make this task easier.

\`\`\`javascript
createFilePath({
  // The node you'd like to convert to a path
  // e.g. from a markdown, JSON, YAML file, etc
  node,
  // Method used to get a node
  // The parameter from \`onCreateNode\` should be passed in here
  getNode,
  // The base path for your files.
  // Defaults to \`src/pages\`. For the example above, you'd use \`src/content\`.
  basePath,
  // Whether you want your file paths to contain a trailing \`/\` slash
  // Defaults to true
  trailingSlash,
})
\`\`\`

#### Example usage

The following is taken from [Gatsby Tutorial, Part Seven](https://www.gatsbyjs.org/tutorial/part-seven/) and is used to create URL slugs for markdown pages.

\`\`\`javascript
const { createFilePath } = require(\`gatsby-source-filesystem\`)

exports.onCreateNode = ({ node, getNode, actions }) => {
  const { createNodeField } = actions
  // Ensures we are processing only markdown files
  if (node.internal.type === \\"MarkdownRemark\\") {
    // Use \`createFilePath\` to turn markdown files in our \`data/faqs\` directory into \`/faqs/slug\`
    const relativeFilePath = createFilePath({
      node,
      getNode,
      basePath: \\"data/faqs/\\",
    })

    // Creates new query'able field with name of 'slug'
    createNodeField({
      node,
      name: \\"slug\\",
      value: \`/faqs\${relativeFilePath}\`,
    })
  }
}
\`\`\`

### createRemoteFileNode

When building source plugins for remote data sources such as headless CMSs, their data will often link to files stored remotely that are often convenient to download so you can work with them locally.

The \`createRemoteFileNode\` helper makes it easy to download remote files and add them to your site's GraphQL schema.

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file.jpg\`,

  // The id of the parent node (i.e. the node to which the new remote File node will be linked to.
  parentNodeId,

  // Gatsby's cache which the helper uses to check if the file has been downloaded already. It's passed to all Node APIs.
  getCache,

  // The action used to create nodes
  createNode,

  // A helper function for creating node Ids
  createNodeId,

  // OPTIONAL
  // Adds htaccess authentication to the download request if passed in.
  auth: { htaccess_user: \`USER\`, htaccess_pass: \`PASSWORD\` },

  // OPTIONAL
  // Adds extra http headers to download request if passed in.
  httpHeaders: { Authorization: \`Bearer someAccessToken\` },

  // OPTIONAL
  // Sets the file extension
  ext: \\".jpg\\",
})
\`\`\`

#### Example usage

The following example is pulled from [gatsby-source-wordpress](https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-wordpress). Downloaded files are created as \`File\` nodes and then linked to the WordPress Media node, so it can be queried both as a regular \`File\` node and from the \`localFile\` field in the Media node.

\`\`\`javascript
const { createRemoteFileNode } = require(\`gatsby-source-filesystem\`)

exports.downloadMediaFiles = ({
  nodes,
  getCache,
  createNode,
  createNodeId,
  _auth,
}) => {
  nodes.map(async node => {
    let fileNode
    // Ensures we are only processing Media Files
    // \`wordpress__wp_media\` is the media file type name for WordPress
    if (node.__type === \`wordpress__wp_media\`) {
      try {
        fileNode = await createRemoteFileNode({
          url: node.source_url,
          parentNodeId: node.id,
          getCache,
          createNode,
          createNodeId,
          auth: _auth,
        })
      } catch (e) {
        // Ignore
      }
    }

    // Adds a field \`localFile\` to the node
    // ___NODE appendix tells Gatsby that this field will link to another node
    if (fileNode) {
      node.localFile___NODE = fileNode.id
    }
  })
}
\`\`\`

The file node can then be queried using GraphQL. See an example of this in the [gatsby-source-wordpress README](/packages/gatsby-source-wordpress/#image-processing) where downloaded images are queried using [gatsby-transformer-sharp](/packages/gatsby-transformer-sharp/) to use in the component [gatsby-image](/packages/gatsby-image/).

#### Retrieving the remote file name and extension

The helper tries first to retrieve the file name and extension by parsing the url and the path provided (e.g. if the url is \`https://example.com/image.jpg\`, the extension will be inferred as \`.jpg\` and the name as \`image\`). If the url does not contain an extension, we use the [\`file-type\`](https://www.npmjs.com/package/file-type) package to infer the file type. Finally, the name and the extension _can_ be explicitly passed, like so:

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file-without-an-extension\`,
  parentNodeId: node.id,
  getCache,
  createNode,
  createNodeId,
  // if necessary!
  ext: \\".jpg\\",
  name: \\"image\\",
})
\`\`\`

### createFileNodeFromBuffer

When working with data that isn't already stored in a file, such as when querying binary/blob fields from a database, it's helpful to cache that data to the filesystem in order to use it with other transformers that accept files as input.

The \`createFileNodeFromBuffer\` helper accepts a \`Buffer\`, caches its contents to disk, and creates a file node that points to it.

## Example usage

The following example is adapted from the source of [\`gatsby-source-mysql\`](https://github.com/malcolm-kee/gatsby-source-mysql):

\`\`\`js
// gatsby-node.js
const createMySqlNodes = require(\`./create-nodes\`)

exports.sourceNodes = async ({ actions, createNodeId, getCache }, config) => {
  const { createNode } = actions
  const { conn, queries } = config
  const { db, results } = await query(conn, queries)

  try {
    queries
      .map((query, i) => ({ ...query, ___sql: results[i] }))
      .forEach(result =>
        createMySqlNodes(result, results, createNode, {
          createNode,
          createNodeId,
          getCache,
        })
      )
    db.end()
  } catch (e) {
    console.error(e)
    db.end()
  }
}

// create-nodes.js
const { createFileNodeFromBuffer } = require(\`gatsby-source-filesystem\`)
const createNodeHelpers = require(\`gatsby-node-helpers\`).default

const { createNodeFactory } = createNodeHelpers({ typePrefix: \`mysql\` })

function attach(node, key, value, ctx) {
  if (Buffer.isBuffer(value)) {
    ctx.linkChildren.push(parentNodeId =>
      createFileNodeFromBuffer({
        buffer: value,
        getCache: ctx.getCache,
        createNode: ctx.createNode,
        createNodeId: ctx.createNodeId,
      })
    )
    value = \`Buffer\`
  }

  node[key] = value
}

function createMySqlNodes({ name, __sql, idField, keys }, results, ctx) {
  const MySqlNode = createNodeFactory(name)
  ctx.linkChildren = []

  return __sql.forEach(row => {
    if (!keys) keys = Object.keys(row)

    const node = { id: row[idField] }

    for (const key of keys) {
      attach(node, key, row[key], ctx)
    }

    node = ctx.createNode(node)

    for (const link of ctx.linkChildren) {
      link(node.id)
    }
  })
}

module.exports = createMySqlNodes
\`\`\`

## Troubleshooting

In case that due to spotty network, or slow connection, some remote files fail to download. Even after multiple retries and adjusting concurrent downloads, you can adjust timeout and retry settings with these environment variables:

- \`STALL_RETRY_LIMIT\`, default: \`3\`
- \`STALL_TIMEOUT\`, default: \`30000\`
- \`CONNECTION_TIMEOUT\`, default: \`30000\`
",
  "shadowableFiles": Array [
    "src/gatsby-source-filesystem/__tests__/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/__tests__/create-file-node.js",
    "src/gatsby-source-filesystem/__tests__/create-remote-file-node.js",
    "src/gatsby-source-filesystem/__tests__/fixtures/file.json",
    "src/gatsby-source-filesystem/__tests__/gatsby-node.js",
    "src/gatsby-source-filesystem/__tests__/index.js",
    "src/gatsby-source-filesystem/__tests__/utils.js",
    "src/gatsby-source-filesystem/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/create-file-node.js",
    "src/gatsby-source-filesystem/create-file-path.js",
    "src/gatsby-source-filesystem/create-remote-file-node.js",
    "src/gatsby-source-filesystem/extend-file-node.js",
    "src/gatsby-source-filesystem/gatsby-node.js",
    "src/gatsby-source-filesystem/index.js",
    "src/gatsby-source-filesystem/utils.js",
  ],
  "shadowedFiles": Array [],
}
`;

exports[`gatsby-plugin resource e2e plugin resource test with hello world starter: GatsbyPlugin update plan 1`] = `
Object {
  "currentState": "/**
 * Configure your Gatsby site with this file.
 *
 * See: https://www.gatsbyjs.org/docs/gatsby-config/
 */
module.exports = {
  /* Your site config here */
  plugins: [\\"gatsby-source-filesystem\\"],
};
",
  "dependsOn": Array [
    Object {
      "name": "gatsby-source-filesystem",
      "resourceName": "NPMPackage",
    },
  ],
  "describe": "Install gatsby-source-filesystem in gatsby-config.js",
  "diff": "- Original  - 1
+ Modified  + 8

@@ -5,6 +5,13 @@
   */
  module.exports = {
    /* Your site config here */
-   plugins: [\\"gatsby-source-filesystem\\"],
+   plugins: [
+     \\"gatsby-source-filesystem\\",
+     {
+       resolve: \\"gatsby-source-filesystem\\",
+       options: undefined,
+       __key: \\"gatsby-source-filesystem\\",
+     },
+   ],
  };
",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "newState": "/**
 * Configure your Gatsby site with this file.
 *
 * See: https://www.gatsbyjs.org/docs/gatsby-config/
 */
module.exports = {
  /* Your site config here */
  plugins: [
    \\"gatsby-source-filesystem\\",
    {
      resolve: \\"gatsby-source-filesystem\\",
      options: undefined,
      __key: \\"gatsby-source-filesystem\\",
    },
  ],
};
",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin create 1`] = `
Object {
  "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
  "description": "Gatsby plugin which parses files within a directory for further parsing by other plugins",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "options": undefined,
  "readme": "# gatsby-source-filesystem

A Gatsby source plugin for sourcing data into your Gatsby application
from your local filesystem.

The plugin creates \`File\` nodes from files. The various \\"transformer\\"
plugins can transform \`File\` nodes into various other types of data e.g.
\`gatsby-transformer-json\` transforms JSON files into JSON data nodes and
\`gatsby-transformer-remark\` transforms markdown files into \`MarkdownRemark\`
nodes from which you can query an HTML representation of the markdown.

## Install

\`npm install --save gatsby-source-filesystem\`

## How to use

\`\`\`javascript
// In your gatsby-config.js
module.exports = {
  plugins: [
    // You can have multiple instances of this plugin
    // to read source nodes from different locations on your
    // filesystem.
    //
    // The following sets up the Jekyll pattern of having a
    // \\"pages\\" directory for Markdown files and a \\"data\\" directory
    // for \`.json\`, \`.yaml\`, \`.csv\`.
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`pages\`,
        path: \`\${__dirname}/src/pages/\`,
      },
    },
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`data\`,
        path: \`\${__dirname}/src/data/\`,
        ignore: [\`**//.*\`], // ignore files starting with a dot
      },
    },
  ],
}
\`\`\`

## Options

In addition to the name and path parameters you may pass an optional \`ignore\` array of file globs to ignore.

They will be added to the following default list:

\`\`\`text
**/*.un~
**/.DS_Store
**/.gitignore
**/.npmignore
**/.babelrc
**/yarn.lock
**/node_modules
../**/dist/**
\`\`\`

To prevent concurrent requests overload of \`processRemoteNode\`, you can adjust the \`200\` default concurrent downloads, with \`GATSBY_CONCURRENT_DOWNLOAD\` environment variable.

## How to query

You can query file nodes like the following:

\`\`\`graphql
{
  allFile {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

To filter by the \`name\` you specified in the config, use \`sourceInstanceName\`:

\`\`\`graphql
{
  allFile(filter: { sourceInstanceName: { eq: \\"data\\" } }) {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

## Helper functions

\`gatsby-source-filesystem\` exports three helper functions:

- \`createFilePath\`
- \`createRemoteFileNode\`
- \`createFileNodeFromBuffer\`

### createFilePath

When building pages from files, you often want to create a URL from a file's path on the file system. E.g. if you have a markdown file at \`src/content/2018-01-23-an-exploration-of-the-nature-of-reality/index.md\`, you might want to turn that into a page on your site at \`example.com/2018-01-23-an-exploration-of-the-nature-of-reality/\`. \`createFilePath\` is a helper function to make this task easier.

\`\`\`javascript
createFilePath({
  // The node you'd like to convert to a path
  // e.g. from a markdown, JSON, YAML file, etc
  node,
  // Method used to get a node
  // The parameter from \`onCreateNode\` should be passed in here
  getNode,
  // The base path for your files.
  // Defaults to \`src/pages\`. For the example above, you'd use \`src/content\`.
  basePath,
  // Whether you want your file paths to contain a trailing \`/\` slash
  // Defaults to true
  trailingSlash,
})
\`\`\`

#### Example usage

The following is taken from [Gatsby Tutorial, Part Seven](https://www.gatsbyjs.org/tutorial/part-seven/) and is used to create URL slugs for markdown pages.

\`\`\`javascript
const { createFilePath } = require(\`gatsby-source-filesystem\`)

exports.onCreateNode = ({ node, getNode, actions }) => {
  const { createNodeField } = actions
  // Ensures we are processing only markdown files
  if (node.internal.type === \\"MarkdownRemark\\") {
    // Use \`createFilePath\` to turn markdown files in our \`data/faqs\` directory into \`/faqs/slug\`
    const relativeFilePath = createFilePath({
      node,
      getNode,
      basePath: \\"data/faqs/\\",
    })

    // Creates new query'able field with name of 'slug'
    createNodeField({
      node,
      name: \\"slug\\",
      value: \`/faqs\${relativeFilePath}\`,
    })
  }
}
\`\`\`

### createRemoteFileNode

When building source plugins for remote data sources such as headless CMSs, their data will often link to files stored remotely that are often convenient to download so you can work with them locally.

The \`createRemoteFileNode\` helper makes it easy to download remote files and add them to your site's GraphQL schema.

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file.jpg\`,

  // The id of the parent node (i.e. the node to which the new remote File node will be linked to.
  parentNodeId,

  // Gatsby's cache which the helper uses to check if the file has been downloaded already. It's passed to all Node APIs.
  getCache,

  // The action used to create nodes
  createNode,

  // A helper function for creating node Ids
  createNodeId,

  // OPTIONAL
  // Adds htaccess authentication to the download request if passed in.
  auth: { htaccess_user: \`USER\`, htaccess_pass: \`PASSWORD\` },

  // OPTIONAL
  // Adds extra http headers to download request if passed in.
  httpHeaders: { Authorization: \`Bearer someAccessToken\` },

  // OPTIONAL
  // Sets the file extension
  ext: \\".jpg\\",
})
\`\`\`

#### Example usage

The following example is pulled from [gatsby-source-wordpress](https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-wordpress). Downloaded files are created as \`File\` nodes and then linked to the WordPress Media node, so it can be queried both as a regular \`File\` node and from the \`localFile\` field in the Media node.

\`\`\`javascript
const { createRemoteFileNode } = require(\`gatsby-source-filesystem\`)

exports.downloadMediaFiles = ({
  nodes,
  getCache,
  createNode,
  createNodeId,
  _auth,
}) => {
  nodes.map(async node => {
    let fileNode
    // Ensures we are only processing Media Files
    // \`wordpress__wp_media\` is the media file type name for WordPress
    if (node.__type === \`wordpress__wp_media\`) {
      try {
        fileNode = await createRemoteFileNode({
          url: node.source_url,
          parentNodeId: node.id,
          getCache,
          createNode,
          createNodeId,
          auth: _auth,
        })
      } catch (e) {
        // Ignore
      }
    }

    // Adds a field \`localFile\` to the node
    // ___NODE appendix tells Gatsby that this field will link to another node
    if (fileNode) {
      node.localFile___NODE = fileNode.id
    }
  })
}
\`\`\`

The file node can then be queried using GraphQL. See an example of this in the [gatsby-source-wordpress README](/packages/gatsby-source-wordpress/#image-processing) where downloaded images are queried using [gatsby-transformer-sharp](/packages/gatsby-transformer-sharp/) to use in the component [gatsby-image](/packages/gatsby-image/).

#### Retrieving the remote file name and extension

The helper tries first to retrieve the file name and extension by parsing the url and the path provided (e.g. if the url is \`https://example.com/image.jpg\`, the extension will be inferred as \`.jpg\` and the name as \`image\`). If the url does not contain an extension, we use the [\`file-type\`](https://www.npmjs.com/package/file-type) package to infer the file type. Finally, the name and the extension _can_ be explicitly passed, like so:

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file-without-an-extension\`,
  parentNodeId: node.id,
  getCache,
  createNode,
  createNodeId,
  // if necessary!
  ext: \\".jpg\\",
  name: \\"image\\",
})
\`\`\`

### createFileNodeFromBuffer

When working with data that isn't already stored in a file, such as when querying binary/blob fields from a database, it's helpful to cache that data to the filesystem in order to use it with other transformers that accept files as input.

The \`createFileNodeFromBuffer\` helper accepts a \`Buffer\`, caches its contents to disk, and creates a file node that points to it.

## Example usage

The following example is adapted from the source of [\`gatsby-source-mysql\`](https://github.com/malcolm-kee/gatsby-source-mysql):

\`\`\`js
// gatsby-node.js
const createMySqlNodes = require(\`./create-nodes\`)

exports.sourceNodes = async ({ actions, createNodeId, getCache }, config) => {
  const { createNode } = actions
  const { conn, queries } = config
  const { db, results } = await query(conn, queries)

  try {
    queries
      .map((query, i) => ({ ...query, ___sql: results[i] }))
      .forEach(result =>
        createMySqlNodes(result, results, createNode, {
          createNode,
          createNodeId,
          getCache,
        })
      )
    db.end()
  } catch (e) {
    console.error(e)
    db.end()
  }
}

// create-nodes.js
const { createFileNodeFromBuffer } = require(\`gatsby-source-filesystem\`)
const createNodeHelpers = require(\`gatsby-node-helpers\`).default

const { createNodeFactory } = createNodeHelpers({ typePrefix: \`mysql\` })

function attach(node, key, value, ctx) {
  if (Buffer.isBuffer(value)) {
    ctx.linkChildren.push(parentNodeId =>
      createFileNodeFromBuffer({
        buffer: value,
        getCache: ctx.getCache,
        createNode: ctx.createNode,
        createNodeId: ctx.createNodeId,
      })
    )
    value = \`Buffer\`
  }

  node[key] = value
}

function createMySqlNodes({ name, __sql, idField, keys }, results, ctx) {
  const MySqlNode = createNodeFactory(name)
  ctx.linkChildren = []

  return __sql.forEach(row => {
    if (!keys) keys = Object.keys(row)

    const node = { id: row[idField] }

    for (const key of keys) {
      attach(node, key, row[key], ctx)
    }

    node = ctx.createNode(node)

    for (const link of ctx.linkChildren) {
      link(node.id)
    }
  })
}

module.exports = createMySqlNodes
\`\`\`

## Troubleshooting

In case that due to spotty network, or slow connection, some remote files fail to download. Even after multiple retries and adjusting concurrent downloads, you can adjust timeout and retry settings with these environment variables:

- \`STALL_RETRY_LIMIT\`, default: \`3\`
- \`STALL_TIMEOUT\`, default: \`30000\`
- \`CONNECTION_TIMEOUT\`, default: \`30000\`
",
  "shadowableFiles": Array [
    "src/gatsby-source-filesystem/__tests__/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/__tests__/create-file-node.js",
    "src/gatsby-source-filesystem/__tests__/create-remote-file-node.js",
    "src/gatsby-source-filesystem/__tests__/fixtures/file.json",
    "src/gatsby-source-filesystem/__tests__/gatsby-node.js",
    "src/gatsby-source-filesystem/__tests__/index.js",
    "src/gatsby-source-filesystem/__tests__/utils.js",
    "src/gatsby-source-filesystem/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/create-file-node.js",
    "src/gatsby-source-filesystem/create-file-path.js",
    "src/gatsby-source-filesystem/create-remote-file-node.js",
    "src/gatsby-source-filesystem/extend-file-node.js",
    "src/gatsby-source-filesystem/gatsby-node.js",
    "src/gatsby-source-filesystem/index.js",
    "src/gatsby-source-filesystem/utils.js",
  ],
  "shadowedFiles": Array [],
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin create plan 1`] = `
Object {
  "currentState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`,
  },
  plugins: [
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        path: \`\${__dirname}/src/pages\`,
        name: \`pages\`,
      },
    },
    \`gatsby-transformer-sharp\`,
    \`gatsby-plugin-emotion\`,
    {
      resolve: \`gatsby-plugin-typography\`,
      options: {
        pathToConfigModule: \`src/utils/typography\`,
      },
    },
    {
      resolve: \`gatsby-transformer-remark\`,
      options: {
        plugins: [
          {
            resolve: \`gatsby-remark-images\`,
            options: {
              maxWidth: 590,
            },
          },
          {
            resolve: \`gatsby-remark-responsive-iframe\`,
            options: {
              wrapperStyle: \`margin-bottom: 1.0725rem\`,
            },
          },
          \`gatsby-remark-prismjs\`,
          \`gatsby-remark-copy-linked-files\`,
          \`gatsby-remark-smartypants\`,
        ],
      },
    },
    \`gatsby-plugin-sharp\`,
    {
      resolve: \`gatsby-plugin-google-analytics\`,
      options: {
        trackingId: \`UA-774017-3\`,
      },
    },
    {
      resolve: \`gatsby-plugin-manifest\`,
      options: {
        name: \`Bricolage\`,
        short_name: \`Bricolage\`,
        icon: \`static/logo.png\`,
        start_url: \`/\`,
        background_color: redish,
        theme_color: redish,
        display: \`minimal-ui\`,
      },
    },
    \`gatsby-plugin-offline\`,
    \`gatsby-plugin-react-helmet\`,
  ],
};
",
  "dependsOn": Array [
    Object {
      "name": "gatsby-source-filesystem",
      "resourceName": "NPMPackage",
    },
  ],
  "describe": "Install gatsby-source-filesystem in gatsby-config.js",
  "diff": "- Original  - 0
+ Modified  + 5

@@ -64,6 +64,11 @@
      },
      \`gatsby-plugin-offline\`,
      \`gatsby-plugin-react-helmet\`,
+     {
+       resolve: \\"gatsby-source-filesystem\\",
+       options: undefined,
+       __key: \\"gatsby-source-filesystem\\",
+     },
    ],
  };
",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "newState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`,
  },
  plugins: [
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        path: \`\${__dirname}/src/pages\`,
        name: \`pages\`,
      },
    },
    \`gatsby-transformer-sharp\`,
    \`gatsby-plugin-emotion\`,
    {
      resolve: \`gatsby-plugin-typography\`,
      options: {
        pathToConfigModule: \`src/utils/typography\`,
      },
    },
    {
      resolve: \`gatsby-transformer-remark\`,
      options: {
        plugins: [
          {
            resolve: \`gatsby-remark-images\`,
            options: {
              maxWidth: 590,
            },
          },
          {
            resolve: \`gatsby-remark-responsive-iframe\`,
            options: {
              wrapperStyle: \`margin-bottom: 1.0725rem\`,
            },
          },
          \`gatsby-remark-prismjs\`,
          \`gatsby-remark-copy-linked-files\`,
          \`gatsby-remark-smartypants\`,
        ],
      },
    },
    \`gatsby-plugin-sharp\`,
    {
      resolve: \`gatsby-plugin-google-analytics\`,
      options: {
        trackingId: \`UA-774017-3\`,
      },
    },
    {
      resolve: \`gatsby-plugin-manifest\`,
      options: {
        name: \`Bricolage\`,
        short_name: \`Bricolage\`,
        icon: \`static/logo.png\`,
        start_url: \`/\`,
        background_color: redish,
        theme_color: redish,
        display: \`minimal-ui\`,
      },
    },
    \`gatsby-plugin-offline\`,
    \`gatsby-plugin-react-helmet\`,
    {
      resolve: \\"gatsby-source-filesystem\\",
      options: undefined,
      __key: \\"gatsby-source-filesystem\\",
    },
  ],
};
",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin destroy 1`] = `undefined`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin update 1`] = `
Object {
  "_message": "Installed gatsby-source-filesystem in gatsby-config.js",
  "description": "Gatsby plugin which parses files within a directory for further parsing by other plugins",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "options": undefined,
  "readme": "# gatsby-source-filesystem

A Gatsby source plugin for sourcing data into your Gatsby application
from your local filesystem.

The plugin creates \`File\` nodes from files. The various \\"transformer\\"
plugins can transform \`File\` nodes into various other types of data e.g.
\`gatsby-transformer-json\` transforms JSON files into JSON data nodes and
\`gatsby-transformer-remark\` transforms markdown files into \`MarkdownRemark\`
nodes from which you can query an HTML representation of the markdown.

## Install

\`npm install --save gatsby-source-filesystem\`

## How to use

\`\`\`javascript
// In your gatsby-config.js
module.exports = {
  plugins: [
    // You can have multiple instances of this plugin
    // to read source nodes from different locations on your
    // filesystem.
    //
    // The following sets up the Jekyll pattern of having a
    // \\"pages\\" directory for Markdown files and a \\"data\\" directory
    // for \`.json\`, \`.yaml\`, \`.csv\`.
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`pages\`,
        path: \`\${__dirname}/src/pages/\`,
      },
    },
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        name: \`data\`,
        path: \`\${__dirname}/src/data/\`,
        ignore: [\`**//.*\`], // ignore files starting with a dot
      },
    },
  ],
}
\`\`\`

## Options

In addition to the name and path parameters you may pass an optional \`ignore\` array of file globs to ignore.

They will be added to the following default list:

\`\`\`text
**/*.un~
**/.DS_Store
**/.gitignore
**/.npmignore
**/.babelrc
**/yarn.lock
**/node_modules
../**/dist/**
\`\`\`

To prevent concurrent requests overload of \`processRemoteNode\`, you can adjust the \`200\` default concurrent downloads, with \`GATSBY_CONCURRENT_DOWNLOAD\` environment variable.

## How to query

You can query file nodes like the following:

\`\`\`graphql
{
  allFile {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

To filter by the \`name\` you specified in the config, use \`sourceInstanceName\`:

\`\`\`graphql
{
  allFile(filter: { sourceInstanceName: { eq: \\"data\\" } }) {
    edges {
      node {
        extension
        dir
        modifiedTime
      }
    }
  }
}
\`\`\`

## Helper functions

\`gatsby-source-filesystem\` exports three helper functions:

- \`createFilePath\`
- \`createRemoteFileNode\`
- \`createFileNodeFromBuffer\`

### createFilePath

When building pages from files, you often want to create a URL from a file's path on the file system. E.g. if you have a markdown file at \`src/content/2018-01-23-an-exploration-of-the-nature-of-reality/index.md\`, you might want to turn that into a page on your site at \`example.com/2018-01-23-an-exploration-of-the-nature-of-reality/\`. \`createFilePath\` is a helper function to make this task easier.

\`\`\`javascript
createFilePath({
  // The node you'd like to convert to a path
  // e.g. from a markdown, JSON, YAML file, etc
  node,
  // Method used to get a node
  // The parameter from \`onCreateNode\` should be passed in here
  getNode,
  // The base path for your files.
  // Defaults to \`src/pages\`. For the example above, you'd use \`src/content\`.
  basePath,
  // Whether you want your file paths to contain a trailing \`/\` slash
  // Defaults to true
  trailingSlash,
})
\`\`\`

#### Example usage

The following is taken from [Gatsby Tutorial, Part Seven](https://www.gatsbyjs.org/tutorial/part-seven/) and is used to create URL slugs for markdown pages.

\`\`\`javascript
const { createFilePath } = require(\`gatsby-source-filesystem\`)

exports.onCreateNode = ({ node, getNode, actions }) => {
  const { createNodeField } = actions
  // Ensures we are processing only markdown files
  if (node.internal.type === \\"MarkdownRemark\\") {
    // Use \`createFilePath\` to turn markdown files in our \`data/faqs\` directory into \`/faqs/slug\`
    const relativeFilePath = createFilePath({
      node,
      getNode,
      basePath: \\"data/faqs/\\",
    })

    // Creates new query'able field with name of 'slug'
    createNodeField({
      node,
      name: \\"slug\\",
      value: \`/faqs\${relativeFilePath}\`,
    })
  }
}
\`\`\`

### createRemoteFileNode

When building source plugins for remote data sources such as headless CMSs, their data will often link to files stored remotely that are often convenient to download so you can work with them locally.

The \`createRemoteFileNode\` helper makes it easy to download remote files and add them to your site's GraphQL schema.

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file.jpg\`,

  // The id of the parent node (i.e. the node to which the new remote File node will be linked to.
  parentNodeId,

  // Gatsby's cache which the helper uses to check if the file has been downloaded already. It's passed to all Node APIs.
  getCache,

  // The action used to create nodes
  createNode,

  // A helper function for creating node Ids
  createNodeId,

  // OPTIONAL
  // Adds htaccess authentication to the download request if passed in.
  auth: { htaccess_user: \`USER\`, htaccess_pass: \`PASSWORD\` },

  // OPTIONAL
  // Adds extra http headers to download request if passed in.
  httpHeaders: { Authorization: \`Bearer someAccessToken\` },

  // OPTIONAL
  // Sets the file extension
  ext: \\".jpg\\",
})
\`\`\`

#### Example usage

The following example is pulled from [gatsby-source-wordpress](https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-wordpress). Downloaded files are created as \`File\` nodes and then linked to the WordPress Media node, so it can be queried both as a regular \`File\` node and from the \`localFile\` field in the Media node.

\`\`\`javascript
const { createRemoteFileNode } = require(\`gatsby-source-filesystem\`)

exports.downloadMediaFiles = ({
  nodes,
  getCache,
  createNode,
  createNodeId,
  _auth,
}) => {
  nodes.map(async node => {
    let fileNode
    // Ensures we are only processing Media Files
    // \`wordpress__wp_media\` is the media file type name for WordPress
    if (node.__type === \`wordpress__wp_media\`) {
      try {
        fileNode = await createRemoteFileNode({
          url: node.source_url,
          parentNodeId: node.id,
          getCache,
          createNode,
          createNodeId,
          auth: _auth,
        })
      } catch (e) {
        // Ignore
      }
    }

    // Adds a field \`localFile\` to the node
    // ___NODE appendix tells Gatsby that this field will link to another node
    if (fileNode) {
      node.localFile___NODE = fileNode.id
    }
  })
}
\`\`\`

The file node can then be queried using GraphQL. See an example of this in the [gatsby-source-wordpress README](/packages/gatsby-source-wordpress/#image-processing) where downloaded images are queried using [gatsby-transformer-sharp](/packages/gatsby-transformer-sharp/) to use in the component [gatsby-image](/packages/gatsby-image/).

#### Retrieving the remote file name and extension

The helper tries first to retrieve the file name and extension by parsing the url and the path provided (e.g. if the url is \`https://example.com/image.jpg\`, the extension will be inferred as \`.jpg\` and the name as \`image\`). If the url does not contain an extension, we use the [\`file-type\`](https://www.npmjs.com/package/file-type) package to infer the file type. Finally, the name and the extension _can_ be explicitly passed, like so:

\`\`\`javascript
createRemoteFileNode({
  // The source url of the remote file
  url: \`https://example.com/a-file-without-an-extension\`,
  parentNodeId: node.id,
  getCache,
  createNode,
  createNodeId,
  // if necessary!
  ext: \\".jpg\\",
  name: \\"image\\",
})
\`\`\`

### createFileNodeFromBuffer

When working with data that isn't already stored in a file, such as when querying binary/blob fields from a database, it's helpful to cache that data to the filesystem in order to use it with other transformers that accept files as input.

The \`createFileNodeFromBuffer\` helper accepts a \`Buffer\`, caches its contents to disk, and creates a file node that points to it.

## Example usage

The following example is adapted from the source of [\`gatsby-source-mysql\`](https://github.com/malcolm-kee/gatsby-source-mysql):

\`\`\`js
// gatsby-node.js
const createMySqlNodes = require(\`./create-nodes\`)

exports.sourceNodes = async ({ actions, createNodeId, getCache }, config) => {
  const { createNode } = actions
  const { conn, queries } = config
  const { db, results } = await query(conn, queries)

  try {
    queries
      .map((query, i) => ({ ...query, ___sql: results[i] }))
      .forEach(result =>
        createMySqlNodes(result, results, createNode, {
          createNode,
          createNodeId,
          getCache,
        })
      )
    db.end()
  } catch (e) {
    console.error(e)
    db.end()
  }
}

// create-nodes.js
const { createFileNodeFromBuffer } = require(\`gatsby-source-filesystem\`)
const createNodeHelpers = require(\`gatsby-node-helpers\`).default

const { createNodeFactory } = createNodeHelpers({ typePrefix: \`mysql\` })

function attach(node, key, value, ctx) {
  if (Buffer.isBuffer(value)) {
    ctx.linkChildren.push(parentNodeId =>
      createFileNodeFromBuffer({
        buffer: value,
        getCache: ctx.getCache,
        createNode: ctx.createNode,
        createNodeId: ctx.createNodeId,
      })
    )
    value = \`Buffer\`
  }

  node[key] = value
}

function createMySqlNodes({ name, __sql, idField, keys }, results, ctx) {
  const MySqlNode = createNodeFactory(name)
  ctx.linkChildren = []

  return __sql.forEach(row => {
    if (!keys) keys = Object.keys(row)

    const node = { id: row[idField] }

    for (const key of keys) {
      attach(node, key, row[key], ctx)
    }

    node = ctx.createNode(node)

    for (const link of ctx.linkChildren) {
      link(node.id)
    }
  })
}

module.exports = createMySqlNodes
\`\`\`

## Troubleshooting

In case that due to spotty network, or slow connection, some remote files fail to download. Even after multiple retries and adjusting concurrent downloads, you can adjust timeout and retry settings with these environment variables:

- \`STALL_RETRY_LIMIT\`, default: \`3\`
- \`STALL_TIMEOUT\`, default: \`30000\`
- \`CONNECTION_TIMEOUT\`, default: \`30000\`
",
  "shadowableFiles": Array [
    "src/gatsby-source-filesystem/__tests__/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/__tests__/create-file-node.js",
    "src/gatsby-source-filesystem/__tests__/create-remote-file-node.js",
    "src/gatsby-source-filesystem/__tests__/fixtures/file.json",
    "src/gatsby-source-filesystem/__tests__/gatsby-node.js",
    "src/gatsby-source-filesystem/__tests__/index.js",
    "src/gatsby-source-filesystem/__tests__/utils.js",
    "src/gatsby-source-filesystem/create-file-node-from-buffer.js",
    "src/gatsby-source-filesystem/create-file-node.js",
    "src/gatsby-source-filesystem/create-file-path.js",
    "src/gatsby-source-filesystem/create-remote-file-node.js",
    "src/gatsby-source-filesystem/extend-file-node.js",
    "src/gatsby-source-filesystem/gatsby-node.js",
    "src/gatsby-source-filesystem/index.js",
    "src/gatsby-source-filesystem/utils.js",
  ],
  "shadowedFiles": Array [],
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin update plan 1`] = `
Object {
  "currentState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`,
  },
  plugins: [
    \\"gatsby-source-filesystem\\",
    \`gatsby-transformer-sharp\`,
    \`gatsby-plugin-emotion\`,
    {
      resolve: \`gatsby-plugin-typography\`,
      options: {
        pathToConfigModule: \`src/utils/typography\`,
      },
    },
    {
      resolve: \`gatsby-transformer-remark\`,
      options: {
        plugins: [
          {
            resolve: \`gatsby-remark-images\`,
            options: {
              maxWidth: 590,
            },
          },
          {
            resolve: \`gatsby-remark-responsive-iframe\`,
            options: {
              wrapperStyle: \`margin-bottom: 1.0725rem\`,
            },
          },
          \`gatsby-remark-prismjs\`,
          \`gatsby-remark-copy-linked-files\`,
          \`gatsby-remark-smartypants\`,
        ],
      },
    },
    \`gatsby-plugin-sharp\`,
    {
      resolve: \`gatsby-plugin-google-analytics\`,
      options: {
        trackingId: \`UA-774017-3\`,
      },
    },
    {
      resolve: \`gatsby-plugin-manifest\`,
      options: {
        name: \`Bricolage\`,
        short_name: \`Bricolage\`,
        icon: \`static/logo.png\`,
        start_url: \`/\`,
        background_color: redish,
        theme_color: redish,
        display: \`minimal-ui\`,
      },
    },
    \`gatsby-plugin-offline\`,
    \`gatsby-plugin-react-helmet\`,
  ],
};
",
  "dependsOn": Array [
    Object {
      "name": "gatsby-source-filesystem",
      "resourceName": "NPMPackage",
    },
  ],
  "describe": "Install gatsby-source-filesystem in gatsby-config.js",
  "diff": "- Original  - 0
+ Modified  + 5

@@ -58,6 +58,11 @@
      },
      \`gatsby-plugin-offline\`,
      \`gatsby-plugin-react-helmet\`,
+     {
+       resolve: \\"gatsby-source-filesystem\\",
+       options: undefined,
+       __key: \\"gatsby-source-filesystem\\",
+     },
    ],
  };
",
  "id": "gatsby-source-filesystem",
  "name": "gatsby-source-filesystem",
  "newState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`,
  },
  plugins: [
    \\"gatsby-source-filesystem\\",
    \`gatsby-transformer-sharp\`,
    \`gatsby-plugin-emotion\`,
    {
      resolve: \`gatsby-plugin-typography\`,
      options: {
        pathToConfigModule: \`src/utils/typography\`,
      },
    },
    {
      resolve: \`gatsby-transformer-remark\`,
      options: {
        plugins: [
          {
            resolve: \`gatsby-remark-images\`,
            options: {
              maxWidth: 590,
            },
          },
          {
            resolve: \`gatsby-remark-responsive-iframe\`,
            options: {
              wrapperStyle: \`margin-bottom: 1.0725rem\`,
            },
          },
          \`gatsby-remark-prismjs\`,
          \`gatsby-remark-copy-linked-files\`,
          \`gatsby-remark-smartypants\`,
        ],
      },
    },
    \`gatsby-plugin-sharp\`,
    {
      resolve: \`gatsby-plugin-google-analytics\`,
      options: {
        trackingId: \`UA-774017-3\`,
      },
    },
    {
      resolve: \`gatsby-plugin-manifest\`,
      options: {
        name: \`Bricolage\`,
        short_name: \`Bricolage\`,
        icon: \`static/logo.png\`,
        start_url: \`/\`,
        background_color: redish,
        theme_color: redish,
        display: \`minimal-ui\`,
      },
    },
    \`gatsby-plugin-offline\`,
    \`gatsby-plugin-react-helmet\`,
    {
      resolve: \\"gatsby-source-filesystem\\",
      options: undefined,
      __key: \\"gatsby-source-filesystem\\",
    },
  ],
};
",
}
`;

exports[`gatsby-plugin resource handles config options as an object 1`] = `
Array [
  Object {
    "name": "gatsby-source-filesystem",
    "options": Object {
      "bar": "baz",
      "baz": "qux",
      "foo": 1,
      "otherStuff": Array [
        Object {
          "bar": Array [
            Object {
              "foo": "bar",
            },
          ],
          "foo": "bar2",
        },
      ],
    },
  },
]
`;
